--- a/example/android/settings.gradle
+++ b/example/android/settings.gradle
@@ -2,3 +2,5 @@ rootProject.name = 'maplibrary.example'
 apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesSettingsGradle(settings)
 include ':app'
 includeBuild('../node_modules/@react-native/gradle-plugin')
+include ':react-native-map-library'
+project(':react-native-map-library').projectDir = new File(rootProject.projectDir, '../../android')
