--- a/example/android/app/src/main/AndroidManifest.xml
+++ b/example/android/app/src/main/AndroidManifest.xml
@@ -13,10 +13,10 @@
     android:label="@string/app_name"
     android:roundIcon="@mipmap/ic_launcher_round"
     android:theme="@style/AppTheme">
-    <!-- Add your Google Maps API Key here -->
+    <!-- Agrega tu clave de API de Google Maps aqui abajo -->
     <meta-data
       android:name="com.google.android.geo.API_KEY"
-      android:value="AIzaSyBhNBwozsnfH3aMuq21zzqC4Gn0bfxkX2U" />
+      android:value="TU_CLAVE_DE_API_DE_GOOGLE_MAPS" />
 
     <activity
       android:name=".MainActivity"
