--- a/example/package.json
+++ b/example/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "react": "18.2.0",
     "react-native": "0.74.3",
-    "react-native-map-library": "^0.0.1"
+    "rn-map-carousel": "^0.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
